--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "router:generate": "tsr generate",
+    "start": "vite"
   },
   "dependencies": {
     "@tanstack/react-router": "^1.91.3",
