--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "router:generate": "tsr generate",
-    "start": "vite"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@tanstack/react-router": "^1.91.3",
