--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Upload artifact (dist folder)
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./ecosteps/dist
+          path: /dist
 
       - name: Deploy to GitHub Pages
         id: deployment
